# agenteVitalmed

./: .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  test_contract_local.py  test_e2e_contrato.py
docker/postgres/: init.sql
scripts/: deploy_data.py  seed_leads.py  setup_local.sh
src/agents/assistant/: CONTEXT.md  agent.py  tools.py
src/agents/contract/: CONTEXT.md  __init__.py  agent.py  tools.py
src/agents/doubts/: CONTEXT.md  agent.py  tools.py
src/agents/router/: CONTEXT.md  agent.py
src/agents/sales/: CONTEXT.md  agent.py
src/contracts/: template_familiar.md  template_individual.md
src/core/: a2a.py  config.py  gcs_client.py
src/db/: models.py  session.py
src/db/migrations/: env.py
src/db/migrations/versions/: 34681de95918_initial_schema.py  7c4975a440b4_update_embedding_dim_3072.py  a3f1b2c4d5e6_add_chatwoot_contact_id_to_leads.py  b1f2c3d4e5f6_add_agent_type_and_external_config.py  b5e2c3d4f6a7_add_voice_to_leads.py  c7d8e9f0a1b2_rename_chatwoot_contact_id_to_conversation_id.py  d7e8f9a0b1c2_add_contracts_table.py
src/gateway/: main.py  redis_client.py  worker.py
src/gateway/routes/: admin.py  contracts.py  status.py  webhook.py
src/integrations/: chatwoot.py  langfuse.py  mcp_chatwoot.py
src/memory/: long_term.py
src/rag/: chunker.py  embedder.py  ingestor.py  retriever.py
src/rag/parsers/: docx_parser.py  pdf_parser.py  video_transcriber.py
tests/: streamlit_app.py
